--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@ html {
           <figure class="zoom">
             <img src="22.jpg" alt="Project One — brief descriptive alt text" loading="lazy" />
             <figcaption>
-              <span>Project One</span>
-              <span class="tag">2025</span>
+              <span>Project five</span>
+              <span class="tag">Smile</span>
             </figcaption>
           </figure>
         </a>
@@ -259,8 +259,8 @@ html {
           <figure class="zoom">
             <img src="13.jpg" alt="Project One — brief descriptive alt text" loading="lazy" />
             <figcaption>
-              <span>Project One</span>
-              <span class="tag">2025</span>
+              <span>Project six</span>
+              <span class="tag">Beauty</span>
             </figcaption>
           </figure>
         </a>
@@ -270,8 +270,8 @@ html {
           <figure class="zoom">
             <img src="15.jpg" alt="Project One — brief descriptive alt text" loading="lazy" />
             <figcaption>
-              <span>Project One</span>
-              <span class="tag">2025</span>
+              <span>Project seven</span>
+              <span class="tag">Culture</span>
             </figcaption>
           </figure>
         </a>
@@ -281,8 +281,8 @@ html {
           <figure class="zoom">
             <img src="20.jpg" alt="Project One — brief descriptive alt text" loading="lazy" />
             <figcaption>
-              <span>Project One</span>
-              <span class="tag">2025</span>
+              <span>Project Eight</span>
+              <span class="tag">Purity</span>
             </figcaption>
           </figure>
         </a>
@@ -292,8 +292,8 @@ html {
           <figure class="zoom">
             <img src="10.jpg" alt="Project One — brief descriptive alt text" loading="lazy" />
             <figcaption>
-              <span>Project One</span>
-              <span class="tag">2025</span>
+              <span>Project Nine</span>
+              <span class="tag">Zanzibar</span>
             </figcaption>
           </figure>
         </a>
@@ -303,8 +303,8 @@ html {
           <figure class="zoom">
             <img src="12.jpg" alt="Project One — brief descriptive alt text" loading="lazy" />
             <figcaption>
-              <span>Project One</span>
-              <span class="tag">2025</span>
+              <span>Project Ten</span>
+              <span class="tag">Tourism</span>
             </figcaption>
           </figure>
         </a>
@@ -351,3 +351,4 @@ html {
   </script>
 </body>
 </html>
+
